[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-code-tracing"
version = "0.1.0"
description = "Code tracing for PyTorch models"
authors = [
    { name = "Justin Chu", email = "justinchu@microsoft.com" },

]
readme = "README.md"
license = "MIT"
dependencies = [
	"torch",
]

[tool.pytest.ini_options]
addopts = "--tb=short --color=yes"
